--- a/css/local-style.css
+++ b/css/local-style.css
@@ -5,7 +5,7 @@
   border-radius: 5px;
   width: 50%; /* Full-width */
   height: 15px; /* Specified height */
-  background: #d3d3d3; /* Grey background */
+  background: #cfffff;
   outline: none; /* Remove outline */
   opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
   -webkit-transition: .2s; /* 0.2 seconds transition on hover */
@@ -52,7 +52,7 @@ input.button {
   border: 1px solid black;
   font-size: 14pt;
   font-weight: bold;
-  background-color: #eee;
+  background-color: #9ec3ff;
   cursor: pointer;
 }
 
