--- a/shared/cocolab-style.css
+++ b/shared/cocolab-style.css
@@ -38,7 +38,7 @@ table.table1 {
 
 /* start slide */
 form input[type="button"] {
-    background-color: #87b3ff;
+    background-color: #b6d0fc;
 }
 
 #cocolab {
